<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/MainBackgraund"
    tools:context=".ui.task.FirstFragment">


    <TextView
        android:id="@+id/userName"
        android:layout_width="343dp"
        android:layout_height="53dp"
        android:layout_marginTop="44dp"
        android:background="@color/userName"
        android:gravity="center|start"
        android:paddingLeft="20dp"
        android:text="@string/userName"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="350dp"
        android:layout_height="250dp"
        android:layout_marginTop="10dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@+id/btn_float"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userName"
        app:layout_constraintVertical_bias="0.0"
        tools:listitem="@layout/item_task" />

    <ImageView
        android:id="@+id/iconComplete"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginLeft="20dp"
        android:background="@color/userName"
        android:src="@drawable/ic_baseline_expand_less_24"
        app:layout_constraintBottom_toTopOf="@id/finish_recyclerView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recyclerView" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="300dp"
        android:layout_height="25dp"
        android:background="@color/userName"
        android:gravity="center_vertical"
        android:text="@string/completedTask"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/finish_recyclerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iconComplete"
        app:layout_constraintTop_toBottomOf="@id/recyclerView"
        app:layout_constraintVertical_bias="0.473" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/finish_recyclerView"
        android:layout_width="350dp"
        android:layout_height="150dp"
        android:visibility="invisible"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@id/btn_float"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recyclerView"
        tools:listitem="@layout/item_finish_task" />

    <Button
        android:id="@+id/btn_float"
        android:layout_width="331dp"
        android:layout_height="53dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/createBtnTask"
        android:text="@string/btn_add_Task"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
